--- a/frankenstein/frankenstein/index.html
+++ b/frankenstein/frankenstein/index.html
@@ -10,12 +10,16 @@
 			margin: 0;
 			padding: 0;
 			font-size: 12pt;
+			width: 100%;
+		    text-align:center;
 		}
 		
 		#canvas {
-			position: absolute;
-			left: 0;
 			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			position: absolute;
 			margin: auto;
 		}
 	</style>
